fixed collapsable jerkiness on side bar

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,11 +45,18 @@
   background-image: none;
 }
 
+.collapseInner {
+  width: 400px;
+}
+
 .side-drawer {
   background-color: rgb(52, 72, 94);
   position: relative;
+  width: 45vw;
 }
-
+.side-drawer-inner {
+  width: 45vw;
+}
 .drawer-button {
   background-color: rgba(52, 72, 94);
   color: white;
@@ -115,18 +122,20 @@
   width: 100%;
   padding-left: auto;
   position: relative;
+  padding: 2rem;
 }
 
 .main-div-partial {
   min-height: 100vh;
   width: 100%;
-  max-width: 73vw;
+  max-width: 55vw;
   position: relative;
+  padding: 2rem;
+  padding-right: 0rem;
 }
-
 .full-div {
   max-width: 100vw;
-  overflow: auto;
+  width: 98vw;
 }
 
 .help-button {
@@ -135,7 +144,6 @@
 }
 
 /* FUNCTION BUTTONS SECTIONS */
-
 .filter-line {
   padding: 1rem;
   display: flex;
@@ -145,6 +153,7 @@
   border-top: 0.1rem solid rgb(20, 81, 142);
   border-right: 0.1rem solid rgb(20, 81, 142);
   border-left: 0.1rem solid rgb(20, 81, 142);
+  overflow:auto;
 }
 
 .filter-search {
@@ -193,14 +202,14 @@
 }
 
 .contact-word {
-  font-size: 2rem;
+  font-size: 1.5rem;
   vertical-align: text-bottom;
   line-height: 1;
   margin-right: 1rem;
 }
 
 .contact-count {
-  font-size: 1.5rem;
+  font-size: 1rem;
   vertical-align: text-bottom;
   line-height: 1;
 }
@@ -236,11 +245,35 @@
   border: .1rem solid rgb(12, 86, 160)
 }
 /* MEDIA QUERIES */
-@media (width>800px) {
-  .filter-line {
-    flex-direction: row;
-    justify-content: space-between;
+
+@media (width>500px) {
+  .spectrum-img {
+    width: auto;
   }
+}
+
+@media (width > 515px){
+  .contact-word {
+    font-size: 2rem;
+  }
+  .contact-count{
+    font-size: 1.5rem;
+}
+.total-count {
+  overflow: none;
+}
+.filter-line {
+  overflow: none;
+}
+.main-div-partial {
+  max-width: 65vw;
+}
+.side-drawer-inner {
+  width: 30vw;
+}
+.side-drawer {
+  width: 30vw;
+}
 }
 
 @media (width>600px) {
@@ -257,8 +290,25 @@
   }
 }
 
-@media (width>500px) {
-  .spectrum-img {
-    width: auto;
+@media (width>800px) {
+  .filter-line {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
+
+@media (width > 870px) {
+  .side-drawer {
+    width: 20vw;
+  }
+  .side-drawer-inner {
+    width: 20vw;
+  }
+  .main-div-partial {
+    max-width: 76vw;
+  }
+  .full-div {
+    overflow:none;
+  }
+}
+
